# xoras-app

./: .gitignore  AGENTS.md  README.md  cdp_fill.py  cdp_inspect.py  index.html  package-lock.json  package.json  speech.txt
scripts/: install-mac.sh
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anomaly.rs  db.rs  lib.rs  main.rs  monitor.rs  sandbox.rs  sys.rs
src/components/: ChatInput.jsx  ChatView.jsx  Dashboard.jsx  DojoPanel.jsx  FileExplorer.jsx  SettingsPanel.jsx  Sidebar.jsx  SystemPanel.jsx  TerminalPanel.jsx
src/context/: AppContext.jsx
src/lib/: api.js  constants.js
